tests/sources/invalid/classes/type_method_call_unknown.fire
// Semantic error: calling an unknown static method/constructor via
// 'Type.method(...)' syntax.

class Utils {
    static fn identity(x: int32) -> int32 {
        return x;
    }
}

fn type_method_call_unknown() -> void {
    y: int32 = Utils.doesNotExist(5);  //~ ERROR FS-SEM-0010 @22
}
